docs/apache-airflow-providers-google/10.26.0/_sources/_api/tests/system/google/cloud/cloud_memorystore/example_cloud_memorystore_redis/index.rst.txt
:py:mod:`tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis`
=====================================================================================

.. py:module:: tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis

.. autoapi-nested-parse::

   Example Airflow DAG for Google Cloud Memorystore service.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: ENV_ID_LOWER

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'cloud_memorystore_redis'

   

.. py:data:: BUCKET_NAME

   

.. py:data:: LOCATION
   :value: 'europe-north1'

   

.. py:data:: MEMORYSTORE_REDIS_INSTANCE_NAME

   

.. py:data:: MEMORYSTORE_REDIS_INSTANCE_NAME_2

   

.. py:data:: MEMORYSTORE_REDIS_INSTANCE_NAME_3

   

.. py:data:: EXPORT_GCS_URL

   

.. py:data:: FIRST_INSTANCE

   

.. py:data:: SECOND_INSTANCE

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

