docs/apache-airflow-providers-google/14.0.0/_sources/_api/tests/system/google/cloud/cloud_memorystore/example_cloud_memorystore_redis/index.rst.txt
tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis
===========================================================================

.. py:module:: tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis

.. autoapi-nested-parse::

   Example Airflow DAG for Google Cloud Memorystore service.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.ENV_ID
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.ENV_ID_LOWER
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.PROJECT_ID
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.DAG_ID
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.BUCKET_NAME
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.LOCATION
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.MEMORYSTORE_REDIS_INSTANCE_NAME
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.MEMORYSTORE_REDIS_INSTANCE_NAME_2
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.MEMORYSTORE_REDIS_INSTANCE_NAME_3
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.EXPORT_GCS_URL
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.FIRST_INSTANCE
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.SECOND_INSTANCE
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.create_bucket
   tests.system.google.cloud.cloud_memorystore.example_cloud_memorystore_redis.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: ENV_ID_LOWER

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'cloud_memorystore_redis'


.. py:data:: BUCKET_NAME
   :value: 'bucket_cloud_memorystore_redis_Uninferable'


.. py:data:: LOCATION
   :value: 'europe-north1'


.. py:data:: MEMORYSTORE_REDIS_INSTANCE_NAME
   :value: 'redis-Uninferable-1'


.. py:data:: MEMORYSTORE_REDIS_INSTANCE_NAME_2
   :value: 'redis-Uninferable-2'


.. py:data:: MEMORYSTORE_REDIS_INSTANCE_NAME_3
   :value: 'redis-Uninferable-3'


.. py:data:: EXPORT_GCS_URL
   :value: 'gs://bucket_cloud_memorystore_redis_Uninferable/my-export.rdb'


.. py:data:: FIRST_INSTANCE

.. py:data:: SECOND_INSTANCE

.. py:data:: create_bucket

.. py:data:: test_run

